3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/rune.c, include/typesproto.h, types/trap/{trap.c, rune.c, common_trap.c},
  types/rune/rune.c, types/legacy/process.c, types/Makefile.am: Refactor some
  rune and trap code.
Alex Schultz 2007-06-06

common/button.c: document, no functional change.
Nicolas Weeger 2007-06-06

Create the 'bugs/bugtrack' directories for the unit test framework. Add test for a bug.
 configure.ac: add new directories
 doc/Developers/testplans: update
 test/Makefile.am: add directory
New files:
 test/bugs/bugtrack/check_1727944.c Makefile.am
 test/bugs/Makefile.am
Nicolas Weeger 2007-06-04

common/utils.c: don't try to decay a non head object, this leads to abort() from remove_ob().
Nicolas Weeger 2007-06-04

Add Crossfire.Object.Skill property.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 plugins/common/plugin_common.c: fix a crash when a NULL value.
Nicolas Weeger 2007-06-04

common/living.c: don't ignore exp gained in a skill you don't know yet.
Nicolas Weeger 2007-06-04

Fix wrong return values.
 types/book/book.c
 types/clock/clock.c
 types/power_crystal/power_crystal.c
 types/sign/sign.c
Nicolas Weeger 2007-06-03

types/shop_inventory/shop_inventory.c: fix documentation.
Nicolas Weeger 2007-06-03

Fix multipart altars not working correctly.
 types/altar/altar.c
 types/trigger_altar/trigger_altar.c
 types/trigger_pedestal/trigger_pedestal.c
Nicolas Weeger 2007-06-03

Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
 server/skills.c
Nicolas Weeger 2007-06-03

server/apply.c: wrong return value when handled by a plugin.
Nicolas Weeger 2007-06-03
